--- a/ocr-quality/pom.xml
+++ b/ocr-quality/pom.xml
@@ -11,6 +11,7 @@
 		<hadoop-core.version>2.0.0-mr1-cdh4.3.0</hadoop-core.version>
 		<hadoop-common.version>2.0.0-cdh4.3.0</hadoop-common.version>
 		<hbase.version>0.94.6-cdh4.3.0</hbase.version>
+		<solr.version>4.6.0</solr.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -45,5 +46,10 @@
 			<artifactId>hbase</artifactId>
 			<version>${hbase.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+			<version>${solr.version}</version>
+        </dependency>
 	</dependencies>
 </project>
