--- a/ocr-quality/pom.xml
+++ b/ocr-quality/pom.xml
@@ -51,5 +51,15 @@
             <artifactId>solr-solrj</artifactId>
 			<version>${solr.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <dependency>
+		  <groupId>org.apache.httpcomponents</groupId>
+		  <artifactId>httpclient</artifactId>
+		  <version>4.2.6</version>
+		</dependency>
 	</dependencies>
 </project>
